# jax-playground

./: README.md  pyproject.toml
notebook/: first_example.ipynb
